made it work for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -9,7 +9,7 @@ DB_PORT=5432
 SMTP_SERVER=smtp.asconsultantsllc.com
 SMTP_PORT=587
 EMAIL_USER=inquiry@asconsultantsllc.com
-EMAIL_PASSWORD=Acuramd
+EMAIL_PASSWORD=Acuramdx2024!
 BUSINESS_EMAIL=inquiry@asconsultantsllc.com
 
 # Application Configuration
