--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,8 @@
   NODE_VERSION = "20"
 
 # Redirect API requests to your backend server
+# IMPORTANT: Update this URL to point to your actual deployed backend
+# You can also remove this redirect if you're using VITE_API_URL for direct API calls
 [[redirects]]
   from = "/api/*"
   to = "https://your-backend-server.com/api/:splat"
