set flask to production

--- a/backend/.env
+++ b/backend/.env
@@ -13,5 +13,5 @@ EMAIL_PASSWORD=Acuramdx2024!
 BUSINESS_EMAIL=inquiry@asconsultantsllc.com
 
 # Application Configuration
-FLASK_ENV=development
-PORT=5000
+FLASK_ENV=production
+PORT=8000
